Remove Google OAuth secrets from code

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,15 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
+# OAuth2 Settings - http://localhost:8080/login/oauth2/code/google
+spring.security.oauth2.client.registration.google.client-id=${CLIENT_ID}
+spring.security.oauth2.client.registration.google.client-secret=${CLIENT_SECRET}
+
+# JWT Settings
+spring.jwt.secret=${JWT_SECRET}
+
+# 15 minutes
+spring.jwt.accessTokenExpiration=900
+
+# 7 days
+spring.jwt.refreshTokenExpiration=604800
